[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mt-timeseries"
version = "0.0.1"
description = "RunTS and ChannelTS containers and utilities for magnetotelluric time series"
authors = [
    {name = "Jared Peacock", email = "jpeacock@usgs.gov"},
    {name = "MTH5 Team"}
]
readme = "README.md"
license = {text = "CC0 1.0 Universal"}
keywords = ["magnetotellurics", "mt", "time series", "runts", "channelts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "xarray",
    "pandas",
    "matplotlib",
    "loguru",
    "obspy",
    "mt_metadata>=1.0.0",
    "mth5>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/kujaku11/mt-timeseries"
Repository = "https://github.com/kujaku11/mt-timeseries"
"Bug Tracker" = "https://github.com/kujaku11/mt-timeseries/issues"

[project.optional-dependencies]
test = [
    "pytest>=3",
    "pytest-cov",
    "pytest-xdist",
    "pytest-subtests",
    "pytest-benchmark",
]
dev = [
    "pytest>=3",
    "pytest-cov",
    "pytest-xdist",
    "pytest-subtests",
    "pytest-runner",
    "pytest-benchmark",
    "black",
    "flake8",
    "isort",
    "pre-commit",
]

[tool.setuptools]
zip-safe = false
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mt_timeseries*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.pytest.ini_options]
markers = [
    "performance: mark test as performance test",
    "integration: mark test as integration test",
    "slow: mark test as slow running"
]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.bumpversion]
current_version = "0.0.1"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "src/mt_timeseries/__init__.py"

[[tool.bumpversion.files]]
filename = "README.md"
